; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/ti/extr_cpts.c_cpts_rx_timestamp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/ti/extr_cpts.c_cpts_rx_timestamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpts = type { i32 }
%struct.sk_buff = type { i32 }
%struct.skb_shared_hwtstamps = type { i32 }

@CPTS_EV_RX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cpts_rx_timestamp(%struct.cpts* %0, %struct.sk_buff* %1) #0 {
  %3 = alloca %struct.cpts*, align 8
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.skb_shared_hwtstamps*, align 8
  store %struct.cpts* %0, %struct.cpts** %3, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %4, align 8
  %7 = load %struct.cpts*, %struct.cpts** %3, align 8
  %8 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %9 = load i32, i32* @CPTS_EV_RX, align 4
  %10 = call i32 @cpts_find_ts(%struct.cpts* %7, %struct.sk_buff* %8, i32 %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  br label %23

14:                                               ; preds = %2
  %15 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %16 = call %struct.skb_shared_hwtstamps* @skb_hwtstamps(%struct.sk_buff* %15)
  store %struct.skb_shared_hwtstamps* %16, %struct.skb_shared_hwtstamps** %6, align 8
  %17 = load %struct.skb_shared_hwtstamps*, %struct.skb_shared_hwtstamps** %6, align 8
  %18 = call i32 @memset(%struct.skb_shared_hwtstamps* %17, i32 0, i32 4)
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @ns_to_ktime(i32 %19)
  %21 = load %struct.skb_shared_hwtstamps*, %struct.skb_shared_hwtstamps** %6, align 8
  %22 = getelementptr inbounds %struct.skb_shared_hwtstamps, %struct.skb_shared_hwtstamps* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  br label %23

23:                                               ; preds = %14, %13
  ret void
}

declare dso_local i32 @cpts_find_ts(%struct.cpts*, %struct.sk_buff*, i32) #1

declare dso_local %struct.skb_shared_hwtstamps* @skb_hwtstamps(%struct.sk_buff*) #1

declare dso_local i32 @memset(%struct.skb_shared_hwtstamps*, i32, i32) #1

declare dso_local i32 @ns_to_ktime(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
